超市基本完成版

--- a/SupermarketMag/resources/log4j.properties
+++ b/SupermarketMag/resources/log4j.properties
@@ -10,7 +10,7 @@ log4j.appender.console.layout.conversionPattern=[%-5p] [%d{hh:mm:ss}] %c %l  %m%
 #将日志输入到文件的对象
 log4j.appender.file=org.apache.log4j.FileAppender
 #指定日志文件的路径
-log4j.appender.file.File=C:\Users\asus'\Desktop\log.txt
+log4j.appender.file.File=D:/log.log
 #处理输出格式的格式化对象
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 #输出格式
